fix: z-index of nav

--- a/phase-3/css/style.css
+++ b/phase-3/css/style.css
@@ -36,6 +36,7 @@ a:link{
 }
 .site-nav{
     background: #FFFFFF;
+    z-index: 9;
 }
 @media (min-width: 768px) {
     .site-header {
